changed the fonts to the gator3a (which has numbers) and made the pg0 all caps into lowercase to avoid the weird uppercase P spacing

--- a/main.css
+++ b/main.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'Gator';
-    src: url('./Gator3-Regular.woff2') format('woff2');
+    src: url('./Gator3a-Regular.woff2') format('woff2');
     font-weight: normal;
     font-style: normal;
     text-align: center;
